--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,9 @@
-dash==1.20.0
-dash-bootstrap-components==0.12.2
-numpy==1.20.3
-pandas==1.2.4
-pyodbc
+numpy
+pandas
+dash
+dash-bootstrap-components
+dash-trich-components
+plotly
+gunicorn
+PyYAML
+
